feat: 支持全局与提供商级别自定义请求头配置